DERBY-6856: Eliminate some autoboxing-related deprecation warnings when building with jdk 9: derby-6856-03-ab-autoboxingDeprecationWarnings.diff.
git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1742289 13f79535-47bb-0310-9956-ffa450edef68