@@ -78,7 +78,7 @@ public class ProcessStreamResult implements Runnable
         this.startTime = System.currentTimeMillis();
         if (timemin != null)
         {
-            Integer i = new Integer(timemin);
+            Integer i = Integer.valueOf(timemin);
             timeout = i.intValue();
         }
         else
